Solved the overlap image menu with small height.

--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -799,7 +799,7 @@ not all injected stylesheet#window-resizer-tooltip a {
 .img-responsive {
     margin-left: auto;
     margin-right: auto;
-    width: 40%;
+    width: 28%;
 }
 
 .navbar {
